[package]
name = "car_rental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0.61"
dotenv = "0.15.0"
